--- a/src/app/Common/online-class-details-b/online-class-details-b.component.html
+++ b/src/app/Common/online-class-details-b/online-class-details-b.component.html
@@ -1,10 +1,13 @@
-<div class="p-4" style="margin-top: 75px;">
+<div class="p-4" style="margin-top: 5px;">
     <div class="d-flex" style="margin-bottom: 15px;border-bottom: 1px solid #f7f7f7;">
         <div class="p-2 mr-auto" style="display: block;padding-left: 0px !important;">
             <span class="onlineTopicHeading">Master 'Reading Skills' for CBSE 10th Board</span>
         </div>
         <div class="p-2">
-            <input type="button" class="regisbutn2" value="register" />
+            <input type="button" class="regisbutn" value="edit" />
+        </div>
+        <div class="p-2">
+            <input type="button" class="regisbutn" value="remove" />
         </div>
     </div>
     <div class="row">
@@ -89,7 +92,7 @@
             <div style="padding:15px">
                 <div id="feedback">
                     <div>
-                        <span class="headings-small">Participant Request [15/30]</span>
+                        <span class="" style="font-size: 14px;color: #5d5d5d;">Participant Request [15/30]</span>
                     </div>
                     <app-participant-request-a></app-participant-request-a>
                 </div>
