--- a/src/app/Institution/Page/ins-notification/ins-notification.component.html
+++ b/src/app/Institution/Page/ins-notification/ins-notification.component.html
@@ -1,3 +1,4 @@
-<p>
-  ins-notification works!
-</p>
+<h4 class="LightBlack"> Notifications</h4>
+<div class="ani-from-bottom">
+  <app-notification-card-b [UserNotificationList]="UserNotificationList"></app-notification-card-b>
+</div>
