--- a/src/app/Institution/Page/ins-wall/ins-wall.component.html
+++ b/src/app/Institution/Page/ins-wall/ins-wall.component.html
@@ -4,7 +4,7 @@
         <!-- <div class="col-md-3">
       <app-iwallprofilecount></app-iwallprofilecount></div> -->
         <div class="col-md-9">
-            <app-inst-post-list [walldata]="PostDetails"></app-inst-post-list>
+            <app-inst-post-list-b [walldata]="PostDetails"></app-inst-post-list-b>
             <!-- <app-profile></app-profile>
       <app-follow-page></app-follow-page>
       <app-notification></app-notification>
