--- a/src/app/Page/online-class-details-a/online-class-details-a.component.css
+++ b/src/app/Page/online-class-details-a/online-class-details-a.component.css
@@ -8,7 +8,14 @@ tr.tabletd td {
 .boldtd {
     font-weight: 600;
 }
-
+.tutorname{
+    font-size: 14px;
+    color: #3D3D3D;
+}
+.tutordescription {
+    color: #5c5c5c;
+    font-size: 12px;
+}
 .onlineTopicHeading {
     color: #3D3D3D;
     font-weight: 500;
@@ -61,33 +68,7 @@ tr.tabletd td {
     border-radius: 10px;
     box-shadow: 0px 2px 5px #b6b6b6;
 }
-.pricetag{
-    border: none;
-    background-color: #e0e0e0;
-    color: #5c5c5c;
-    padding: 7px 15px;
-    font-weight: 500;
-    border-radius: 10px;   
-    font-size: 14px;
-}
-.pricetag.free{
-    border: 1px solid #2A8CB7;
-    background-color: white;
-    color: #2A8CB7;
-    padding: 7px 15px;
-    font-weight: 500;
-    border-radius: 10px;   
-    font-size: 14px;
-}
-.platformtag{
-    border: none;
-    background-color: #e0e0e0;
-    color: #5c5c5c;
-    padding: 7px 15px;
-    font-weight: 500;
-    border-radius: 10px;   
-    font-size: 14px;
-}
+
 
 
 
@@ -141,4 +122,39 @@ tr.tabletd td {
     color: #494949;
     padding: 5px 5px;
     font-weight: 500;
+}
+
+
+/* The Modal (background) */
+
+.modalpop {
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+.modalpop.modal-open {
+    display: block;
+    /* Hidden by default */
+}
+
+.modalpop.modal-close {
+    display: none;
+    /* Hidden by default */
 }
