--- a/src/app/User/notification/notification.component.html
+++ b/src/app/User/notification/notification.component.html
@@ -1,5 +1,5 @@
-<div>
-    <h4 class="Color">Notifications</h4>
+
+    
    <!-- <div class="d-flex">
          <div class="p-2 flex-fill" style="text-align:center">
             <button class="NavButtons" [ngClass]="value === 'Request' ? 'Active' : ''" (click)="value = 'Request'">
@@ -29,5 +29,12 @@
         </div>
         
     </div> -->
-    <app-notificatio-card-a [UserNotificationList]="UserNotificationList"></app-notificatio-card-a>
-</div>
+    <div class="card100">
+      <div class="card100-heading">
+        <h5 class="LightBlack">Notifications</h5>
+      </div>
+      <div class="card100-content">
+        <app-notificatio-card-a [UserNotificationList]="UserNotificationList"></app-notificatio-card-a>
+      </div>
+    </div>
+   
