--- a/src/app/User/wall-suggestion/wall-suggestion.component.html
+++ b/src/app/User/wall-suggestion/wall-suggestion.component.html
@@ -1,17 +1,18 @@
-<div class="card app-wall-suggestion card-noborder">
-    <div id="userfavtopic">
-        <div>
-            <span class="headings-small">Topics</span>
-            <div style="display: block;" style="margin-top: 10px;">
-                <app-topic-badges-a></app-topic-badges-a>
-            </div>
-        </div>
+<div class="card100" id="">
+    <div class="card100-heading">
+        <span class="headings-small">Topics</span>
     </div>
+    <div class="card100-content">
+        <app-topic-badges-a></app-topic-badges-a>
+    </div>
+</div>
 
-    <div id="feedback"  style="margin-top: 25px;">
-        <div>
-            <span class="headings-small">Feedback</span></div>
+
+<div class="card100" id="">
+    <div class="card100-heading">
+        <span class="headings-small">Feedback</span>
+    </div>
+    <div class="card100-content">
         <app-feedback-a></app-feedback-a>
     </div>
-   
 </div>
