--- a/src/app/Common/create-post/create-post.component.html
+++ b/src/app/Common/create-post/create-post.component.html
@@ -1,179 +1,263 @@
 <app-navbar></app-navbar>
-<div class="container qpcontainer" style="margin-top:60px">
-    <div class="" style="padding:10px;">
-        <div class="col-lg-12 row">
-            <div class="input-field">
-                <input class="input-material" type="text" id="name" required />
-                <label class="label-material" for="name">Enter Heading:</label>
+
+<div class="qpcontainer" style="margin-top:10px;">
+    <div class="card100 row">
+        <div class="col-md-12">
+            <div class="" style="padding:10px;">
+                <div class="col-lg-12 row">
+                    <div class="input-field">
+                        <input class="input-material" type="text" id="name" required />
+                        <label class="label-material" for="name">Enter Heading:</label>
+                    </div>
+                </div>
+                <div class="col-lg-12 row" style="margin-top: 10px; ">
+                    <span>Description:</span>
+                    <textarea class="form-control" [(ngModel)]="questionHeading" rows="5" id="comment "></textarea>
+                </div>
+
+                <div class="row" style="margin-top: 10px;">
+                    <div class="col-md-4">
+                        <div style="display: block;">
+                            <span>Date</span>
+                        </div>
+                        <div style="display: block;" class="form-control" (click)="hidecalender()">
+                            <span *ngIf="!selectedDate">Choose Date</span>
+                            <span *ngIf="selectedDate">Change Date</span>
+                            <i style="float: right;" class="far fa-calendar-alt"></i>
+                        </div>
+                        <span style="font-size: 12px;">{{selectedDate}}</span>
+                        <dl-date-time-picker style="font-size: 12px;"
+                            [ngStyle]="(IsCalenderShowing) ? {'display': 'block'} : {'display': 'none'}"
+                            leftIconClass="fas fa-chevron-left" rightIconClass="fas fa-chevron-right" startView="day"
+                            maxView="year" minView="minute" minuteStep="10" [(ngModel)]="selectedDate">
+                        </dl-date-time-picker>
+                    </div>
+
+
+                    <div class="col-lg-4 ">
+                        <span>Duration</span>
+                        <select class="form-control " [(ngModel)]="totalDuration "
+                            (change)="onQuestionCountChange($event.target.value) ">
+                            <option value="5 ">15 Mins</option>
+                            <option value="10 ">30 Mins</option>
+                            <option value="15 ">45 Mins</option>
+                            <option value="20 ">1 Hour</option>
+
+                        </select>
+                    </div>
+
+                </div>
+
+
+                <div class="row" style="margin-top: 10px;">
+
+                    <div class="col-lg-12">
+
+                        <span style="display: block;">Platform</span>
+                        <div class="box flex-wrap">
+                            <label>
+                                <input type="radio" name="Platform" checked="">
+                                <span>Zoom</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="Platform">
+                                <span>Google Hangout</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="Platform">
+                                <span>Cisco Web Ex</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="Platform">
+                                <span>Skype</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="Platform">
+                                <span>Skype</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="Platform">
+                                <span>Zoho Meetings</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="Platform">
+                                <span>Amazon Chime</span>
+                            </label>
+                        </div>
+                    </div>
+
+
+
+                    <!-- <div class="col-lg-4 ">
+                        <span>Language</span>
+                        <select class="form-control " [(ngModel)]="totalQuestions " (change)="onQuestionCountChange($event.target.value) ">
+                        <option value="5 ">English</option>
+                        <option value="5 ">Tamil</option>
+                        <option value="5 ">Hindi</option>
+                        </select>
+                    </div> -->
+                </div>
+                <div class="row" style="margin-top: 15px;">
+                    <div class="col-lg-12" style="margin-top: auto;">
+                        <span style="display: block;">Add Topics</span>
+
+                        <div style="margin-top: 10px;margin-bottom: 10px;">
+                            <span class="filter-text" *ngFor="let fls of filters">
+                                {{fls}} <i (click)="removefilter(fls)" style="margin-left: 5px;"
+                                    class="far fa-trash-alt"></i>
+                            </span>
+                        </div>
+
+                        <input type="text" class="form-control" [(ngModel)]="searchText" placeholder="Search.."
+                            style="border-radius: 0.01rem;border: 1px solid #c4c4c4;" />
+                    </div>
+
+                    <div class="col-md-12" *ngIf="searchText?.length>0">
+                        <div class="d-flex col-md-12" *ngFor="let c of characters | filter : searchText"
+                            style="padding:10px;;border-bottom: 1px solid #e7e7e6;background-color: #fafafa">
+                            <div class="flex-grow-1" style="background-color: #fafafa">
+                                <div class="col-md-12">
+                                    <span class="onlineTopicHeading" style="display: block;"
+                                        (click)="addfilter(c.username)">
+                                        {{c.username}}</span>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 15px;">
+                    <div class="col-md-12">
+                    <span style="display: block;">Organisers</span> <button type="button" class="btn regisbutn-small"
+                        (click)="openModal('custom-modal-1')">Add</button>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 15px;">
+                    <div class="col-md-4" *ngFor="let organiserList of Addedorganisers">
+                        <div class="card noborder">
+                            <div class="d-flex">
+                                <div class="p-2">
+                                    <img src="../../../assets/Image/elonmusk1.jpg"
+                                        style="width: 72px;height:72px;border-radius: 10px;">
+                                </div>
+                                <div class="p-2 flex-grow-1">
+                                    <span class="F10" style="display: block;">{{organiserList.type}}</span>
+                                    <span class="F14" style="display: block;">{{organiserList.name}}</span>
+                                    <div style="display: block;">
+                                        <span class="F12">{{organiserList.brief}} </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 15px;">
+                    <div class="col-lg-4" style="margin-top: auto;">
+                        <span style="display: block;">Fee</span>
+                        <div class="box">
+                            <label>
+                                <input type="radio" value="free" [(ngModel)]="chooseWebinarFee" name="chooseWebinarFee"
+                                    checked="">
+                                <span>Free</span>
+                            </label>
+                            <label>
+                                <input type="radio" value="charge" [(ngModel)]="chooseWebinarFee"
+                                    name="chooseWebinarFee">
+                                <span>Charge</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-lg-4" style="margin-top: auto;" *ngIf="chooseWebinarFee=='charge'">
+                        <div class="input-field">
+                            <input class="input-material" type="text" id="MaxCount" required />
+                            <label class="label-material" for="MaxCount">Enter Registration Cost:</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 15px;">
+                    <div class="col-lg-4" style="margin-top: auto;">
+                        <span style="display: block;">Participant Count</span>
+                        <div class="box">
+                            <label>
+                                <input type="radio" name="like" checked="">
+                                <span>Open</span>
+                            </label>
+                            <label>
+                                <input type="radio" name="like">
+                                <span>Limited</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-lg-4" style="margin-top: auto;">
+                        <div class="input-field">
+                            <input class="input-material" type="text" id="MaxCount" required />
+                            <label class="label-material" for="MaxCount">Enter Max Count:</label>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-md-12" style="margin-top: 35px;">
+                    <div style="margin-top:10px;">
+                        <button class="btn btn-success btnPost">Post</button>
+                    </div>
+                </div>
+            </div>          
         </div>
-        <div class="col-lg-12 row" style="margin-top: 10px; ">
-            <span>Description:</span>
-            <textarea class="form-control" [(ngModel)]="questionHeading" rows="5" id="comment "></textarea>
-        </div>
-
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-md-4">
-                <div style="display: block;">
-                    <span>Date</span>
-                </div>
-                <div style="display: block;" class="form-control" (click)="hidecalender()">
-                    <span *ngIf="!selectedDate">Choose Date</span>
-                    <span *ngIf="selectedDate">Change Date</span>
-                    <i style="float: right;" class="far fa-calendar-alt"></i>
-                </div>
-                <span style="font-size: 12px;">{{selectedDate}}</span>
-                <dl-date-time-picker style="font-size: 12px;" [ngStyle]="(IsCalenderShowing) ? {'display': 'block'} : {'display': 'none'}" leftIconClass="fas fa-chevron-left" rightIconClass="fas fa-chevron-right" startView="day" maxView="year" minView="minute" minuteStep="10"
-                    [(ngModel)]="selectedDate">
-                </dl-date-time-picker>
-            </div>
-
-
-            <div class="col-lg-4 ">
-                <span>Duration</span>
-                <select class="form-control " [(ngModel)]="totalQuestions " (change)="onQuestionCountChange($event.target.value) ">
-          <option value="5 ">15 Mins</option>
-          <option value="10 ">30 Mins</option>
-          <option value="15 ">45 Mins</option>
-          <option value="20 ">1 Hour</option>
-          
-        </select>
-            </div>
-
-        </div>
-
-
-        <div class="row" style="margin-top: 10px;">
-
-            <div class="col-lg-12">
-
-                <span style="display: block;">Platform</span>
-                <div class="box flex-wrap">
-                    <label>
-  <input type="radio" name="Platform" checked="">
-  <span>Zoom</span>
-</label>
-                    <label>
-  <input type="radio" name="Platform">
-  <span>Google Hangout</span>
-</label>
-                    <label>
-  <input type="radio" name="Platform">
-  <span>Cisco Web Ex</span>
-</label>
-                    <label>
-  <input type="radio" name="Platform">
-  <span>Skype</span>
-</label>
-                    <label>
-  <input type="radio" name="Platform">
-  <span>Skype</span>
-</label>
-                    <label>
-  <input type="radio" name="Platform">
-  <span>Zoho Meetings</span>
-</label>
-                    <label>
-  <input type="radio" name="Platform">
-  <span>Amazon Chime</span>
-</label>
-                </div>
-            </div>
 
 
 
-            <!-- <div class="col-lg-4 ">
-                <span>Language</span>
-                <select class="form-control " [(ngModel)]="totalQuestions " (change)="onQuestionCountChange($event.target.value) ">
-                <option value="5 ">English</option>
-                <option value="5 ">Tamil</option>
-                <option value="5 ">Hindi</option>
-                </select>
-            </div> -->
-        </div>
-
-        <div class="row" style="margin-top: 15px;">
-            <div class="col-lg-4" style="margin-top: auto;">
-                <span style="display: block;">Fee</span>
-                <div class="box">
-                    <label>
-                <input type="radio"  value="free"  [(ngModel)]="chooseWebinarFee" name="chooseWebinarFee" checked="">
-                <span>Free</span>
-            </label>
-                    <label>
-                <input type="radio" value="charge" [(ngModel)]="chooseWebinarFee" name="chooseWebinarFee">
-                <span>Charge</span>
-            </label>
-                </div>
-            </div>
-            <div class="col-lg-4" style="margin-top: auto;" *ngIf="chooseWebinarFee=='charge'">
-                <div class="input-field">
-                    <input class="input-material" type="text" id="MaxCount" required />
-                    <label class="label-material" for="MaxCount">Enter Registration Cost:</label>
-                </div>
-            </div>
-        </div>
-        <div class="row" style="margin-top: 15px;">
-            <div class="col-lg-4" style="margin-top: auto;">
-                <span style="display: block;">Open</span>
-                <div class="box">
-                    <label>
-                <input type="radio" name="like" checked="">
-                <span>Open</span>
-            </label>
-                    <label>
-                <input type="radio" name="like">
-                <span>Limited</span>
-            </label>
-                </div>
-            </div>
-            <div class="col-lg-4" style="margin-top: auto;">
-                <div class="input-field">
-                    <input class="input-material" type="text" id="MaxCount" required />
-                    <label class="label-material" for="MaxCount">Enter Max Count:</label>
-                </div>
-            </div>
-        </div>
     </div>
-
-
-    <div class="row">
-        <div class="col-md-12" style="margin-top: 35px;">
-
-            <div style="margin-top:10px;">
-                <button class="btn btn-success btnPost">Post</button>
-            </div>
-        </div>
-
-
-    </div>
-
-
 </div>
+
+<modal-a id="custom-modal-1">
+    <div class="d-flex">
+        <div class="mr-auto p-2">
+            <span class="LightBlack">Add Organiser</span>
+        </div>
+        <div class="p-2">
+            <button class="regisbutn-cancel-small" (click)="closeModal('custom-modal-1');">Close</button>
+        </div>
+    </div>
+    <div style="display: block;" style="margin-top: 10px;">
+        <span style="display: block;">Type: </span>
+        <select class="form-control " [(ngModel)]="organTempType">
+            <option value="1 ">Organiser</option>
+            <option value="2 ">Host</option>
+            <option value="3 ">Speaker</option>
+        </select>
+    </div>
+
+    <div style="display: block;" style="margin-top: 10px;">
+        <span style="display: block;">Name: </span>
+        <input class="form-control" type="text" [(ngModel)]="organTempName" />
+    </div>
+    <div style="display: block;" style="margin-top: 10px;">
+        <span style="display: block;">brief: </span>
+        <input class="form-control" type="text" [(ngModel)]="organTempBrief" />
+    </div>
+
+    <div class="d-flex flex-row-reverse" style="margin-top:20px ;">
+        <div class="p-2">
+            <button class="regisbutn-follow-small-color" (click)="closeModal('custom-modal-1');">Add</button>
+        </div>
+    </div>
+
+</modal-a>
 
 <div id="myModal" *ngIf="ShowModal" class="modal">
 
     <!-- Modal content -->
     <div class="modal-content">
-        <span class="close" (click)="closemodal()">&times;</span>
-        <div *ngFor="let qbmodel of questionbank;let inmodel = index">
+        <p>Some text in the Modal..</p>
+        <app-online-class-e></app-online-class-e>
+    </div>
 
+</div>
 
-            <p>
-                <span style="font-weight: 600;">{{inmodel+1}}. {{questionbank[inmodel].question}}</span>
-            </p>
-            <ul>
-                <li>a.) {{questionbank[inmodel].optiona}}</li>
-                <li>b.) {{questionbank[inmodel].optionb}}</li>
-                <li>c.) {{questionbank[inmodel].optionc}}</li>
-                <li>d.) {{questionbank[inmodel].optiond}}</li>
-                <li>anser. ) <span style="color: green;">{{questionbank[inmodel].answer}}</span></li>
-                <li>hint. ) {{questionbank[inmodel].hint}}</li>
-                <li><img [src]="questionbank[inmodel].image" style="max-height: 360px;"> <br /></li>
-            </ul>
-
-        </div>
-
+<div id="addOrganisers" *ngIf="addOrganisersShowModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
         <p>Some text in the Modal..</p>
     </div>
 
