--- a/src/app/Common/user-detail-a/user-detail-a.component.html
+++ b/src/app/Common/user-detail-a/user-detail-a.component.html
@@ -1,31 +1,26 @@
 <div class="" style="margin-bottom:5px">
-    <input type="text" placeholder="Search Friends" class="form-control" [(ngModel)]="SearchFriends">
+    <input style="border: none; margin-left: 15px;  
+    border-bottom: 1px solid #247ba0;" type="text" placeholder="Search Organisers" class="form-control"
+        [(ngModel)]="SearchFriends">
 </div>
-<div style="margin-bottom:5px">
-    <div class="card-noborder">
-
-        <div class=''>
-            <div *ngFor="let UsrFrdlst of UserFriendList | search:'Username':SearchFriends">
-                <div class="d-flex mb-3">
-                    <div class="p-2 flex-grow-1">
-                        <img src="{{UsrFrdlst.UserImage}}" class="iconDetails" alt="name">
-                        <div class='container2'>
-                            <div style='margin-left:60px;'>
-                                <div style="display: block;"><span class="F14 Black">{{UsrFrdlst.Username}}</span></div>
-                                <div style="float:left;display: block"><span class="F12 LightBlack">{{UsrFrdlst.userid}}</span></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="p-2" style="display: flex;justify-content: center;align-items: center;">
-                        <span class="F12 LightBlack">{{UsrFrdlst.lastused}} Followers</span>
-                    </div>
-                    <div class="p-2" style="display: flex;justify-content: center;align-items: center;">
-                        <input type="button" value="Unfollow" class="regisbutn-small" />
-                    </div>
-
-                </div>
-
+<div class="row" style="margin-top: 20px;">
+    <div class="col-md-4" *ngFor="let UsrFrdlst of UserFriendList | search:'Username':SearchFriends">
+        <div class="boxshadowcard d-flex flex-column" style="text-align: center;">
+            <div style="text-align: center;margin-top: 10px;">
+                <img src="{{UsrFrdlst.UserImage}}" class="iconDetails" alt="name">
+            </div>
+            <div style="margin-top: 10px;">
+                <span class="F14 Black">{{UsrFrdlst.Username}}</span>
+            </div>
+            <div style="margin-top:-10px;display: block">
+                <span class="F12 LightBlack">{{UsrFrdlst.userid}}</span></div>
+            <div>
+                <span style="font-size: 10px;" class="LightBlack">{{UsrFrdlst.lastused}} Followers</span>
+            </div>
+            <div>
+                <input type="button" value="Unfollow" class="regisbutn-small" />
             </div>
         </div>
     </div>
+
 </div>
