--- a/src/app/Institution/Card/inst-badges-card/inst-badges-card.component.css
+++ b/src/app/Institution/Card/inst-badges-card/inst-badges-card.component.css
@@ -42,8 +42,8 @@ a.AddMemmber {
 }
 
 .topiclist {
-    background: #5c5c5c;
+    background-color: #e0e0e0;
     padding: 5px 15px;
-    color: white;
+    color: #5c5c5c;
     border-radius: 15px;
 }
