--- a/src/app/Institution/Card/inst-post-list/inst-post-list.component.html
+++ b/src/app/Institution/Card/inst-post-list/inst-post-list.component.html
@@ -1,30 +1,34 @@
-<h5 class="Black"> Webinars</h5>
-<!--<div class="col-md-8"> -->
-<table class="table">
-    <tr *ngFor="let post of PostDetails" (click)="valueChanged()">
-        <td>
-            <span class="F12" style="display: block;">06:45AM</span>
-            <span class="F12">12-Aug-20</span>
-        </td>
-        <td>
-            <span class="F12" style="display: block;">WEB123689</span>
-            <span class="F12" style="display: block;">Thermodynamics and Heat Explanation</span>
-            <span class="F12">DR.Rathore M.B.B.S</span>
-        </td>
-        <td>
-            <span class="F12" style="display: block;">5 Open</span>
-            <span class="F12">20 Seats</span>
-        </td>
-        <td>
-            <span class="F12">Free</span>
-        </td>
-        <td>
-            <span class="F12">Zoom</span>
-        </td>
-        <td>
-            <i class="fas fa-chevron-circle-right PrimaryColor2"></i>
-        </td>
-    </tr>
-</table>
-<!-- <app-ipost [data]="post"></app-ipost> -->
-<!-- </div> -->
+<div class="card100">
+    <div class="card100-heading">
+        <h5 class="Black"> Webinars</h5>
+    </div>
+    <div class="card100-content">
+      
+        <table class="table">
+            <tr *ngFor="let post of PostDetails" (click)="valueChanged()">
+                <td>
+                    <span class="F12" style="display: block;">06:45AM</span>
+                    <span class="F12">12-Aug-20</span>
+                </td>
+                <td>
+                    <span class="F12" style="display: block;">WEB123689</span>
+                    <span class="F12" style="display: block;">Thermodynamics and Heat Explanation</span>
+                    <span class="F12">DR.Rathore M.B.B.S</span>
+                </td>
+                <td>
+                    <span class="F12" style="display: block;">5 Open</span>
+                    <span class="F12">20 Seats</span>
+                </td>
+                <td>
+                    <span class="F12">Free</span>
+                </td>
+                <td>
+                    <span class="F12">Zoom</span>
+                </td>
+                <td>
+                    <i class="fas fa-chevron-circle-right PrimaryColor2"></i>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
