--- a/src/app/Institution/Page/institution-main-page/institution-main-page.component.html
+++ b/src/app/Institution/Page/institution-main-page/institution-main-page.component.html
@@ -1,10 +1,11 @@
 <app-navbar></app-navbar>
-<div class="container">
+<!-- <div class="container" style="margin-top:85px;"> -->
+<div class="" style="margin-top:85px;">
     <div class="row">
-        <div class="col-md-12">
-            <app-ins-wall-profile-side></app-ins-wall-profile-side>
+        <div class="col-md-3" style="padding:5px 12px;margin-left: 10px;">
+            <app-ins-wall-profile-side [Editable]="" [UserWallData]="UserWallData"></app-ins-wall-profile-side>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-9">
             <router-outlet></router-outlet>
         </div>
     </div>
