--- a/src/app/Institution/ins-wall-profile-side/ins-wall-profile-side.component.html
+++ b/src/app/Institution/ins-wall-profile-side/ins-wall-profile-side.component.html
@@ -1,34 +1,34 @@
-<div class="card card-noborder ani-fadein" style="margin-top: 90px;padding: 5px;margin-bottom: 20px;">
-    <div class="d-flex" style="background-color: #f7f7f7;">
-
-
-        <div style="margin: 20px 10px">
+<div class="" style="margin-left: 10px;">
+    <div class="card100" style="background-color: #247ba0;text-align: center;border-radius: 15px;">
+        <div style="text-align:center;margin-top: 20px;margin-bottom: 10px;">
             <img src="assets/Image/employee1.jpg" class="rounded-circle" alt="Cinque Terre" width="90" height="90">
         </div>
-        <div>
-            <div class="d-flex flex-column" style="top: 5%;position: absolute;">
-                <div class="p-2">@Username</div>
-                <div class="p-2">@edpickerid</div>
-                <div class="p-2">@email | @phone</div>
-            </div>
+        <div style="margin-bottom: 15px;">
+            <span class="F12 PrimaryColor2" style="display: block;color: White;">@userid</span>
+            <span style="margin-bottom: 5px;color: White;" class="F16">S. Ramalingam</span>
+            <span class="F12" style="color: White;display: block;margin-bottom: 15px;">M.Tech Physics | 12 Years
+                Exp</span>
+            <span style="margin-bottom: 5px;" class="F12"
+                style="color: White;display: block;margin-bottom: 8px;">@Followers Count</span>
+            <input type="button" class="btn regisbutn-follow-small-color" value="Follow" />
         </div>
-        <div class="p-2 ml-auto">
-            <div style="top: 0%;position: relative;">
-                <div class="d-flex flex-column">
+    </div>
+    <div class="card100" style="line-height: 20px;margin-top: 15px;">
+        <div class="card100-content">
 
-                    <div class="" style="text-align: center;margin-top: 10px;"><span class="F12"
-                            style="text-align: center;">32000 followers</span>
-                        </div>
-                    <div style="margin-top: 10px;" class=""><button type="button" class="btn regisbutn-small">Follow
-                        <i style="margin-left: 10px;" class="far fa-bell"></i>
-                        </button>
-                    </div>
-                    <div class="" style="margin-top: 10px;">
-                        <i style="margin-left: 10px;" class="fab fa-instagram"></i>
-                        <i style="margin-left: 10px;" class="fab fa-facebook-f"></i>
-                        <i style="margin-left: 10px;" class="fab fa-youtube"></i>
-                        </div>
-                </div>
+            <span class="F12 LightBlack" style="display: block;margin-bottom: 5px;"><i style="margin-right: 5px;"
+                    class="fas fa-mobile-alt"></i> @Phone Number</span>
+            <span style="margin-bottom: 5px;" class="F12 LightBlack" style="display: block;margin-bottom: 5px;"><i
+                    style="margin-right: 5px;" class="fas fa-envelope"></i> @EMail</span>
+            <span style="margin-bottom: 5px;" class="F12 LightBlack" style="display: block;margin-bottom: 5px;"><i
+                    style="margin-right: 5px;" class="fas fa-briefcase"></i>@Professional</span>
+            <span style="margin-bottom: 5px;" class="F12 LightBlack" style="display: block;margin-bottom: 5px;"><i
+                    style="margin-right: 5px;" class="fas fa-briefcase"></i>@Website</span>
+            <div class="" style="display: block;margin-top: 15px;">
+                <i style="" class="fab fa-instagram"></i>
+                <i style="margin-left: 10px;" class="fab fa-facebook-f"></i>
+                <i style="margin-left: 10px;" class="fab fa-youtube"></i>
+                <i style="margin-left: 10px;" class="fab fa-twitter"></i>
             </div>
         </div>
     </div>
