--- a/src/app/Page/user-main-page/user-main-page.component.html
+++ b/src/app/Page/user-main-page/user-main-page.component.html
@@ -1,11 +1,15 @@
 <app-navbar></app-navbar>
-<div class="container" style="margin-top:85px;">
-    <div class="row">
-        <div class="col-md-3">
+<!-- <div class="container" style="margin-top:85px;"> -->
+    <div class="" style="margin-top:85px;">
+        <div class="row">
+        <div class="col-md-3" style="padding:5px 12px;margin-left: 10px;">
             <app-wall-profile [Editable]="" [UserWallData]="UserWallData"></app-wall-profile>
         </div>
         <div class="col-md-9">
             <router-outlet></router-outlet>
+            <!-- <div class="loader">
+                Just, wait a sec ! I'm loading
+              </div> -->
         </div>
     </div>
 </div>
