--- a/src/app/User/search-page/search-page.component.html
+++ b/src/app/User/search-page/search-page.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container" style="margin-top:85px;">
     <div class="d-flex" style="margin-top: 20px;margin-bottom: 20px;">
-        <button type="button" class="btn-back" style="float: left;" ><i class="fas fa-arrow-left"></i> back</button>
+        <button type="button" class="btn-back" style="float: left;"><i class="fas fa-arrow-left"></i> back</button>
     </div>
     <h5 style="color:#5c5c5c"> Search Webinars @Organisers #Topics</h5>
     <div class="row" style="margin-top: 20px;">
@@ -14,7 +14,7 @@
             </div>
             <div>
 
-                <div *ngIf="searchText?.length>0"
+                <div  *ngIf="searchText?.length>0"
                     style="background-color: #fafafa;top: 38px;width: 92%;position: absolute;">
                     <div class="d-flex" *ngFor="let c of characters | filter : searchText" style="padding: 5px 10px;
                 border-bottom: 5px;
@@ -22,19 +22,17 @@
                 border-bottom: 1px solid #e7e7e6;
             ">
                         <div class="flex-grow-1">
-                            <span class="onlineTopicHeading" style="display: block;"> {{c.username}}</span>
+                            <span class="onlineTopicHeading" style="display: block;" (click)="addfilter(c.username)">
+                                {{c.username}}</span>
                         </div>
-                        <div class="" *ngIf="c.type=='H'">
-                            <input type="button" class="regisbutn-cancel-x-small" value="add"
-                                (click)="addfilter(c.username)" />
-                        </div>
+
                     </div>
                 </div>
 
 
             </div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div style="padding:5px">
                 <h6 style="color: #5c5c5c;">results
                     <i class="fas fa-filter F14" *ngIf="isShowFilter" (click)="toggleShowfilter()"></i>
@@ -56,32 +54,16 @@
 
 
             <div style="margin-top: 20px;">
-                <span class="filter-text"  *ngFor="let fls of filters">
+                <span class="filter-text" *ngFor="let fls of filters">
                     {{fls}} <i (click)="removefilter(fls)" style="margin-left: 5px;" class="far fa-trash-alt"></i>
                 </span>
             </div>
-            <div *ngIf="searchText?.length>0" style="background-color: #f1f1f1;
-          margin-left: 15px;
-          width: 100%;
-          margin-top: -10px;">
-                <div class="d-flex mb-3" style="padding: px;" *ngFor="let c of characters | filter : searchText" style="padding: 5px 10px;
-          border-bottom: 5px;
-          margin-top: 10px;
-          border-bottom: 1px solid #e7e7e6;
-      ">
-                    <div class="p-2 flex-grow-1">
-                        <span class="F12" style="background-color: red;
-                padding: 3px 8px;
-                border-radius: 15px;
-                color: whitesmoke;">Webinar</span>
-
-                        <span class="onlineTopicHeading" style="display: block;"> {{c.username}}</span>
-                        <span class="onlineSubDescription" style="display: block;">Date</span>
-                    </div>
-                    <div class="p-2" *ngIf="c.type=='H'">
-                        <input type="button" value="Add" (click)="addfilter(c.username)" />
-                    </div>
+            <div *ngIf="searchText?.length>0">
+                <div style="padding-right: 1px !important;
+      padding-left: 1px !important;" *ngFor="let data of PostDetails">
+                    <app-online-class-d [onlineclassdata]="data"></app-online-class-d>
                 </div>
+
 
             </div>
         </div>
