--- a/src/app/User/wall-profile/wall-profile.component.html
+++ b/src/app/User/wall-profile/wall-profile.component.html
@@ -1,32 +1,25 @@
-<div class="card card-noborder">
-  <div style="text-align:center;margin-top: 20px;">
-    <img src="assets/Image/employee1.jpg" class="rounded-circle" alt="Cinque Terre" width="90" height="90">
-  </div>
-  <div class="" style="padding:3px 5px 0px 5px;margin-top: 10px;">
-    <div>
-      <span style="margin-bottom: 5px;" class="F16">Krishnan RA</span>
-      <span class="F12 PrimaryColor2" style="display: block;margin-bottom: 15px;">@userid</span>
-      <span class="F12" style="color: #5c5c5c;display: block;margin-bottom: 5px;"><i style="margin-right: 5px;"
-          class="fas fa-mobile-alt"></i> @Phone Number</span>
-      <span style="margin-bottom: 5px;" class="F12" style="color: #5c5c5c;display: block;margin-bottom: 5px;"><i
-          style="margin-right: 5px;" class="fas fa-envelope"></i> @EMail</span>
-      <span style="margin-bottom: 5px;" class="F12" style="color: #5c5c5c;display: block;margin-bottom: 5px;"><i
-          style="margin-right: 5px;" class="fas fa-briefcase"></i>@Professional</span>
-
+<div class="" style="margin-left: 10px;">
+  <div class="card100" style="background-color: #247ba0;text-align: center;border-radius: 15px;">
+    <div style="text-align:center;margin-top: 20px;margin-bottom: 10px;">
+      <img src="assets/Image/employee1.jpg" class="rounded-circle" alt="Cinque Terre" width="90" height="90">
+    </div>
+    <div style="margin-bottom: 15px;">
+      <span class="F12 PrimaryColor2" style="display: block;color: White;">@userid</span>
+      <span style="margin-bottom: 5px;color: White;" class="F16">S. Ramalingam</span>
+      <span class="F12" style="color: White;display: block;margin-bottom: 15px;">12th - CBSE - Accounts</span>      
     </div>
   </div>
+  <div class="card100" style="line-height: 20px;margin-top: 15px;">
+    <div class="card100-content">
+      <span class="F12 LightBlack" style="display: block;margin-bottom: 5px;"><i style="margin-right: 5px;"
+          class="fas fa-mobile-alt"></i> @Phone Number</span>
+      <span style="margin-bottom: 5px;" class="F12 LightBlack" style="display: block;margin-bottom: 5px;"><i
+          style="margin-right: 5px;" class="fas fa-envelope"></i> @EMail</span>
+      <span style="margin-bottom: 5px;" class="F12 LightBlack" style="display: block;margin-bottom: 5px;"><i
+          style="margin-right: 5px;" class="fas fa-briefcase"></i>@Profession</span>
+    </div>
+  </div>
+  <div class="card100" style="margin-top: 15px;">
+    <app-wall-profile-count [UserCount]=""></app-wall-profile-count>
+  </div>
 </div>
-
-<!-- <div class="card card-noborder" style="padding:10px;margin-top: 10px;">
-  <div style="text-align:center;margin: 10px 0px;">
-    <span style="font-size:32px;">48</span>
-  </div>
-  <div style="text-align:center">
-    <span style="font-size:16px;color:#5c5c5c">Points Available</span>
-  </div>
-</div> 
-<div style="margin-top: 10px;margin-bottom: 10px;">
-  <button class="btn btn-success" type="button" style="width: 100%;">Add Points</button>
-</div>-->
-
-<app-wall-profile-count [UserCount]=""></app-wall-profile-count>
