--- a/src/app/User/wall/wall.component.html
+++ b/src/app/User/wall/wall.component.html
@@ -68,10 +68,10 @@
             <!-- <app-wall-post [walldata]="PostDetails"></app-wall-post> -->
 
             <div style="padding-right: 1px !important;
-        padding-left: 1px !important;" *ngFor="let members of PostDetails">
+        padding-left: 1px !important;" *ngFor="let data of PostDetails">
                 <!-- <app-post [data]="members"></app-post> -->
                 <!-- <app-online-class-a [onlineclassdata]="members"></app-online-class-a> -->
-                <app-online-class-d [onlineclassdata]="members"></app-online-class-d>
+                <app-online-class-d [onlineclassdata]="data"></app-online-class-d>
             </div>
 
             <!-- </div> -->
