--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-
 @import "~bootstrap/dist/css/bootstrap.css";
-
 @font-face {
     font-family: ubuntu-regular;
     src: url(assets/Fonts/Ubuntu/Ubuntu-Regular.ttf) format("opentype");
-  };
+}
 
+;
 .F6 {
     font-size: 6px;
 }
@@ -76,10 +75,6 @@
     color: #3d3d3d;
 }
 
-.DarkBlack {
-    color: #000000;
-}
-
 .LightBlack {
     color: #5c5c5c;
 }
@@ -92,22 +87,24 @@
     color: #3d3d3d;
 }
 
-.PrimaryColor{
-    color:#247ba0;
+.PrimaryColor {
+    color: #247ba0;
 }
 
-.PrimaryColor2{
-    color:#227396;
+.PrimaryColor2 {
+    color: #227396;
 }
 
-.PrimaryColor3{
-    color:#2A8CB7;
+.PrimaryColor3 {
+    color: #2A8CB7;
 }
-.PrimaryRed{
-color:#d24956;
+
+.PrimaryRed {
+    color: #d24956;
 }
-.PrimaryGreen{
-    color:#28a745;
+
+.PrimaryGreen {
+    color: #28a745;
 }
 
 .HeaderDiv {
@@ -149,54 +146,38 @@ color:#d24956;
 
 .card-online-class-a {
     margin-bottom: 15px;
-    box-shadow: 1px 1px 3px rgb(211, 211, 211) ;
+    box-shadow: 1px 1px 3px rgb(211, 211, 211);
     border-radius: 0px;
 }
-.card-online-class-a:hover{
+
+.card-online-class-a:hover {
     -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    
-  
 }
+
 .boxshadowcard {
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
     margin-bottom: 15px;
     padding-bottom: 1px !important;
 }
 
-
-
-.MT10 {
+.card100 {
     margin-top: 10px;
+    background-color: white;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0 2px 18px 1px rgba(49, 53, 72, .1);
+    border-radius: .45rem;
 }
 
-.MB10 {
-    margin-bottom: 10px;
+.card100-content {
+    padding: .25rem 1rem;
 }
 
-.ML10 {
-    margin-left: 10px;
-}
-
-.MR10 {
-    margin-right: 10px;
-}
-
-.MT20 {
-    margin-top: 20px;
-}
-
-.MB20 {
-    margin-bottom: 20px;
-}
-
-.ML20 {
-    margin-left: 20px;
-}
-
-.MR20 {
-    margin-right: 20px;
+.card100-heading {
+    padding: 1.5rem 1rem 0.25rem 1rem;
+    border-bottom: none;
 }
 
 html {
@@ -204,7 +185,7 @@ html {
     overflow-x: hidden;
 }
 
- ::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 0px;
     /* remove scrollbar space /
   background: transparent; / optional: just make scrollbar invisible /
@@ -212,25 +193,49 @@ html {
   / optional: show position indicator in red */
 }
 
- ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: #FF0000;
 }
 
- ::placeholder {
+::placeholder {
     /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #e2e2e2;
     opacity: 1;
     /* Firefox */
 }
 
- :-ms-input-placeholder {
+:-ms-input-placeholder {
     /* Internet Explorer 10-11 */
     color: #e2e2e2;
 }
 
- ::-ms-input-placeholder {
+::-ms-input-placeholder {
     /* Microsoft Edge */
     color: #e2e2e2;
+}
+
+.pricetag {
+    border: none;
+    background-color: white;
+    color: #2A8CB7;
+    padding: 7px 15px;
+    font-weight: 500;
+    border-radius: 10px;
+    font-size: 14px;
+}
+
+.pricetag.free {
+    font-weight: bold;
+}
+
+.platformtag {
+    border: none;
+    background-color: white;
+    color: #5c5c5c;
+    padding: 7px 15px;
+    font-weight: 500;
+    border-radius: 10px;
+    font-size: 14px;
 }
 
 .regisbutn {
@@ -286,6 +291,17 @@ html {
     box-shadow: 0px 2px 5px #b6b6b6;
 }
 
+.regisbutn-follow-small-color {
+    border: none;
+    font-size: 14px;
+    background-color: white;
+    color: #247ba0;
+    padding: 5px 15px;
+    font-weight: 500;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px #5a5a5a;
+}
+
 .regismore {
     width: 100%;
     border: none;
@@ -297,29 +313,30 @@ html {
 
 .onlineTopicHeading:hover {
     color: #2A8CB7 !important;
-   
 }
-
-
 
 .ani-from-bottom {
     animation: 1s ease-out 0s 1 slideInFromBottom;
 }
+
 @keyframes slideInFromBottom {
     0% {
-      transform: translateY(10%);
+        transform: translateY(10%);
     }
     100% {
-      transform: translateY(0);
+        transform: translateY(0);
     }
-  }
+}
 
-  .ani-fadein{
-      animation: 2s ease 0s 1 fadein;
-  }
+.ani-fadein {
+    animation: 2s ease 0s 1 fadein;
+}
 
-  @keyframes fadein
-  {
-    0% {opacity: 0;}
-    100% {opacity: 1;}  
-  }
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
